0.1.1

  User-visible changes:
   * Add support for new cclive options (0.2.4+)
     - --title, --title-cclass
     - --stream-exec, --stream
   * Add missing statusbar messages for menu items
   * Add more widget dynamics in Options
     - "Start streaming at" stays hidden unless cclive was built WITH_PERL=yes
     - If paths have been defined in Preferences
        - "Start streaming at" is enabled if "Stream command" is defined
        - "Run external command" is enabled if "External command" is defined
     - When URL changes
       - "Continue partially transferred file" checkbox is enabled/disabled
       - "Video Format" combobox list is recreated based on URL
   * Change default window sizes
   * Change "Save video as" label to checkbox
   * Clean up widget texts


0.1.0
(March 1, 2009)

  * Initial release